--- a/CHANGES
+++ b/CHANGES
@@ -2,7 +2,7 @@
 ===== 
 * Collapsed socrates-impl into this package. There's no point in
   keeping a separate interfaces packages, given that there will ever
-  only one implementation...      
+  be only one implementation...      
 
 3.2.6
 =====
